--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -15,7 +16,6 @@
       <section class="card" id="html-section"> 
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML note here</li>
           <li>The head element cointains information about the webpage</li>
           <li>The body element represents the visible content shown to the user</li>
           <li>The header element appears at the top of the page, usually contains a navigation menu and/or introductory content</li>
@@ -27,7 +27,12 @@
         <h2>CSS</h2>
 
         <ul>
-          <li>Enter your css note here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>You  can add css rules to created class selector</li>
+          <li>To link css use link element</li>
+          <li>rel attribute specifies the relationship between the current document and the linked document resource</li>
+          <li>href attribute specifies the location(URL) of the external resource</li>
         </ul>
 
       </section>
