Second batch of javascript added

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -41,7 +41,7 @@
         <h2>Git</h2>
 
         <ul>
-          <li>Enter your Git notes here</li>
+          <li>pwd, cd, ls</li>
           <li>Git status: check what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>git checkout main: to move back to main branch</li>
@@ -53,7 +53,10 @@
         <h2>Javascript</h2>
 
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a name container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
+          <li>Array can hold multiple variable/data values</li>
+          <li>Can save code equations or actions in functions to recall</li>
         </ul>
 
       </section>
